1.9.8.1
 - Fixed a subtle bug in IterateSortedAlignment that would cause iteration to return partial results for some alignments
   when restricting results to a window.
   The problem would manifest more clearly for alignments against genomes where contigs have smaller indices than
   chromosomes and chromosome sequences are listed in non-increasing order (e.g., chr 16 appearing before chr 10) and
   restricting to window from chr16 to MT (which should include chr 10 in that genome, but returned no result on chr 10).
 - Extend methyl-stats mode to estimate fraction of methylated cytosine observed in CpX contexts.
 - trim mode: Fix exception that could occur when trimming reads with no quality scores.
 - Optimize merging of TMH when the files are large (>100M compressed).
 - discover-sequence-variants: add ability to describe zero, one or more group comparisons. Syntax is A/B,A/C to compare
  group A to B and group A to C. Additional pairs can be described, separated by coma.
 - Change goby script to request the bash shell explicitly. This is needed on systems where bin/sh is not a synonym for
   bash. Thanks to Martin Frith for catching this on Ubuntu.
 - Change how targetLengths are concatenated. It turns out that last-to-compact needs alignment entries matching
   the target to record the length in the alignment. We need to keep any length seen when we concat because the first
   chunk may just not have the length for the remaining parts..
 - Improved logic for --paired-end filename support in the fastaToCompactMode.
 - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
   in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
   The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
   After possible realignment, and filtering to remove possible errors, EIR are reported with their frequencies.